<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.diet.DietFragment">

    <Button
        android:id="@+id/button_samples"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="368dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_nutrients"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="368dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_nutrient"
        app:layout_constraintBottom_toTopOf="@+id/button_samples"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_products"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="368dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_product"
        app:layout_constraintBottom_toTopOf="@+id/button_nutrients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textDietMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/happy_monkey"
        android:justificationMode="inter_word"
        android:text="@string/textDietMain"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>